--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -16,7 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_dataset"
+    "from utils import get_dataset\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as patches\n",
+    "import numpy as np\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -25,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = get_dataset(\"PROCESSED TF RECORD PATH\")"
+    "dataset = get_dataset(\"/app/project/data/waymo/training_and_validation/*.tfrecord\")"
    ]
   },
   {
@@ -48,7 +53,33 @@
     "    This function takes a batch from the dataset and display the image with \n",
     "    the associated bounding boxes.\n",
     "    \"\"\"\n",
-    "    # ADD CODE HERE"
+    "    color_coding = {\n",
+    "            1 : \"red\", # Vehicles\n",
+    "            2 : \"blue\", # Pedestrians\n",
+    "            3 : \"yellow\",\n",
+    "            4 : \"green\" # Cyclists\n",
+    "        }\n",
+    "    fig, ax = plt.subplots(1, figsize=(20, 15))   \n",
+    "    \n",
+    "    img = batch['image'].numpy()\n",
+    "    ax.imshow(img)\n",
+    "\n",
+    "    img_width, img_height, _ = img.shape\n",
+    "    \n",
+    "    for i, box in enumerate(batch['groundtruth_boxes']):\n",
+    "            x1 = box[0] * img_width\n",
+    "            y1 = box[1] * img_height\n",
+    "            x2 = box[2] * img_width\n",
+    "            y2 = box[3] * img_height\n",
+    "            height = x2 - x1\n",
+    "            width = y2 - y1\n",
+    "            \n",
+    "            color = color_coding[batch['groundtruth_classes'].numpy()[i]]\n",
+    "            \n",
+    "            rect = patches.Rectangle((y1,x1), width, height, linewidth=1, edgecolor=color, facecolor=\"none\")\n",
+    "            ax.add_patch(rect)   \n",
+    "    \n",
+    "    plt.show()"
    ]
   },
   {
@@ -66,7 +97,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## STUDENT SOLUTION HERE"
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.shuffle(100, reshuffle_each_iteration=True)\n",
+    "subset = dataset.take(10)\n",
+    "\n",
+    "for batch in subset:\n",
+    "        display_instances(batch)\n",
+    "\n"
    ]
   },
   {
@@ -89,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
