--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -20,6 +20,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "import numpy as np\n",
+    "from PIL import Image, ImageOps\n",
+    "\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -30,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = get_dataset(\"/app/project/data/waymo/training_and_validation/*.tfrecord\")"
+    "dataset = get_dataset(\"/app/project/data/waymo/training_and_validation/*.tfrecord\")\n"
    ]
   },
   {
@@ -56,7 +58,6 @@
     "    color_coding = {\n",
     "            1 : \"red\", # Vehicles\n",
     "            2 : \"blue\", # Pedestrians\n",
-    "            3 : \"yellow\",\n",
     "            4 : \"green\" # Cyclists\n",
     "        }\n",
     "    fig, ax = plt.subplots(1, figsize=(20, 15))   \n",
@@ -125,6 +126,102 @@
     "\n",
     "In this last part, you are free to perform any additional analysis of the dataset. What else would like to know about the data?\n",
     "For example, think about data distribution. So far, you have only looked at a single file..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Statistics for car, pedestrian, cyclist class\n",
+    "def add_count(count, statistics):\n",
+    "    statistics[0] = count if count < statistics[0] else statistics[0]\n",
+    "    statistics[1] = count if count > statistics[1] else statistics[1]\n",
+    "    statistics[3] = statistics[3] + count if count > 0 else statistics[3]\n",
+    "    \n",
+    "def add_class_occurence(car, ped, cyc, co):\n",
+    "    row = [car, ped, cyc]\n",
+    "    co.append(row)\n",
+    "\n",
+    "def calculate_mean(total, statistics):\n",
+    "    statistics[2] = statistics[3] / total\n",
+    "\n",
+    "statistics = [1e20, 0, 0, 0] # min, max, mean, total\n",
+    "\n",
+    "car_stat = statistics.copy()\n",
+    "pedestrian_stat = statistics.copy()\n",
+    "cyclists_stat = statistics.copy()\n",
+    "\n",
+    "classes_occurence = [] # Car, Pedestrian, Cyclists\n",
+    "total_images = 0\n",
+    "\n",
+    "for batch in dataset.take(10000):\n",
+    "    classes = batch['groundtruth_classes'].numpy()\n",
+    "    total_images = total_images + 1 \n",
+    "    \n",
+    "    car_count = np.count_nonzero(classes == 1)\n",
+    "    pedestrian_count = np.count_nonzero(classes == 2)\n",
+    "    cyclists_count = np.count_nonzero(classes == 4)\n",
+    "    \n",
+    "    add_count(car_count, car_stat)\n",
+    "    add_count(pedestrian_count, pedestrian_stat)\n",
+    "    add_count(cyclists_count, cyclists_stat)\n",
+    "    add_class_occurence(car_count, pedestrian_count, cyclists_count, classes_occurence)\n",
+    "    \n",
+    "calculate_mean(total_images, car_stat)\n",
+    "calculate_mean(total_images, pedestrian_stat)\n",
+    "calculate_mean(total_images, cyclists_stat)\n",
+    "total_objects = car_stat[3] + pedestrian_stat[3] + cyclists_stat[3]\n",
+    "\n",
+    "# Printout statistics\n",
+    "print('Total images: ', total_images)\n",
+    "print('Total objects: ', total_objects)\n",
+    "print('Car class min/max/mean/total: ', car_stat, ' Percentage: ', (car_stat[3]*100)/total_objects, \"%\" )\n",
+    "print('Pedestrian class min/max/mean/total: ', pedestrian_stat, ' Percentage: ', (pedestrian_stat[3]*100)/total_objects, \"%\")\n",
+    "print('Cyclist class min/max/mean/total: ', cyclists_stat, ' Percentage: ', (cyclists_stat[3]*100)/total_objects, \"%\")\n",
+    "\n",
+    "\n",
+    "# Printout histograms\n",
+    "classes_occurence = np.array(classes_occurence)\n",
+    "fig, ax = plt.subplots(1, 1, sharey=True, tight_layout=False, figsize=(20, 15))\n",
+    "ax.hist(classes_occurence[:, 0], bins=car_stat[1]-car_stat[0]+1)\n",
+    "ax.set_title('Car class histogram')\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, sharey=True, tight_layout=False, figsize=(20, 15))\n",
+    "ax.hist(classes_occurence[:, 1], bins=pedestrian_stat[1]-pedestrian_stat[0]+1)\n",
+    "ax.set_title('Pedestrian class histogram')\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, sharey=True, tight_layout=False, figsize=(20, 15))\n",
+    "ax.hist(classes_occurence[:, 2], bins=cyclists_stat[1]-cyclists_stat[0]+1)\n",
+    "ax.set_title('Cyclist class histogram')\n",
+    "\n",
+    "# Histogram to determine images brightness\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.shuffle(200, reshuffle_each_iteration=True)\n",
+    "\n",
+    "gray_images = []\n",
+    "\n",
+    "for batch in dataset.take(200):\n",
+    "    img = ImageOps.grayscale(Image.fromarray(batch['image'].numpy()))\n",
+    "    gray_img = np.asarray(img)\n",
+    "\n",
+    "#     fig, ax = plt.subplots(1, figsize=(20, 15))   \n",
+    "#     ax.imshow(gray_img, cmap='gray')\n",
+    "\n",
+    "    gray_images.extend(gray_img.flatten())\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, sharey=True, tight_layout=False, figsize=(20, 15))\n",
+    "ax.hist(gray_images, bins=256)\n",
+    "ax.set_title('Brightness histogram')\n"
    ]
   },
   {
