Modified config path

--- a/Explore augmentations.ipynb
+++ b/Explore augmentations.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = get_train_input(\"../solution/pipeline_new.config\")"
+    "train_dataset = get_train_input(\"./experiments/reference/pipeline_new.config\")"
    ]
   },
   {
